#51 add universal selector matcher support (#52)
* #51 add universal selector matcher support

* update deps, remove commons-lang3